--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -230,6 +230,10 @@
                     <!--#end for#-->
                     </select>
                     <span class="desc">$T('srv-explain-categories')</span>
+                    <div class="alert alert-info alert-no-category">
+                        <span class="glyphicon glyphicon-info-sign"></span>
+                        $T('srv-explain-no-categories')
+                    </div>
                 </div>
                 <div class="field-pair">
                     <label class="config" for="displayname$cur">$T('srv-displayname')</label>
@@ -291,6 +295,33 @@
         }
         \$(this).css('background-color', theColor)
     })
+
+    /** 
+        Message on no Default category selected
+    **/
+    function checkServerCats() {
+        // Now we check all of them
+        var hasDefault = false;
+        // Only check the active servers, not the add-server one
+        \$('.section:not(#addServerContent) select[name="categories"]').each(function() {
+            // See if this server is enabled
+            if(!\$(this).parents('.section').find('.col2').hasClass('server-disabled') ) {
+                // Is there Default?
+                if(\$(this).val().indexOf('Default') > -1) {
+                    // Hide
+                    \$('.alert-no-category').hide()
+                    hasDefault = true 
+                    // All good!
+                    return true
+                }
+            }
+        })
+        // We found nothing.. Let's show a warning
+        if(!hasDefault) \$('.alert-no-category').show()
+    }
+
+    \$('select[name="categories"]').on('change', checkServerCats)
+    checkServerCats()    
     
     /**
         Click events
